kubernetes/core/networking/gateway-system/sample-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-httproute
  namespace: default
spec:
  parentRefs:
    - name: private
      namespace: networking
      sectionName: https
  hostnames:
    - "test.debug.chkpwd.com"
  rules:
  - backendRefs:
    - name: nginx-svc
      port: 80
